--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
     <body>
-        <h1>Welcome Visitor</h1>
+        <h1>Welcome Visitor!</h1>
+        <h3>Choose Your Path</h3>
+        <h4 id="header-text">You are in elementary school...</h4>
         <script src="./three.js"></script>
         <!-- <script src="./GLTFLoader.js"></script> -->
         <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
