--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <body>
         <h1>Welcome Visitor!</h1>
         <h3>Choose Your Path</h3>
-        <h4 id="header-text">You are in elementary school...</h4>
+        <h4 id="header-text">As a child, you loved...</h4>
         <script src="./three.js"></script>
-        <!-- <script src="./GLTFLoader.js"></script> -->
         <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
         <script src="./dist/bundle.js"></script>
